--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+# Server properties
+server.port=9093
+server.servlet.context-path=/sakila
 spring.application.name=sakila
+# Database access (JDBC)
+spring.datasource.url=jdbc:mysql://localhost:3306/sakila
+spring.datasource.username=root
+spring.datasource.password=Hitema2025
+# JPA parametrized
+spring.jpa.open-in-view=false
+# logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
+logging.level.root=INFO
+logging.level.com.sakila.intro=TRACE
